# Core

./: .gitignore  CMakeLists.txt  LICENSE.md  SourceList.cmake
CMake/: SourceFiles.cmake  ThirdPartyLibraries.cmake
CMake/Hunter/: HunterConfig.cmake  HunterInit.cmake
CMake/Modules/: ConfigureCPlusPlus.cmake  ConfigurePlatform.cmake  Debug.cmake  GetGitCommitHash.cmake
CMake/Toolchain/: VisualStudio2019.cmake  VisualStudio2022.cmake
CMake/Toolchain/Modules/: SetCXXVersion.cmake  SetPlatform.cmake
CMake/Toolchain/OperatingSystem/: Windows.cmake
Source/: BitmaskOperators.h  ByteBuffer.cpp  ByteBuffer.h  Colour.cpp  Colour.h  Colours.cpp  Core.h.in  Date.cpp  Date.h  Dimension.cpp  Dimension.h  Endianness.cpp  Endianness.h  FilePathVariableEvaluator.cpp  FilePathVariableEvaluator.h  LibraryInformation.cpp  LibraryInformation.h  Point.cpp  Point.h  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  Rectangle.cpp  Rectangle.h
Source/7Zip/: SevenZipArchive.cpp  SevenZipArchive.h  SevenZipArchiveEntry.cpp
Source/Analytics/Segment/: SegmentAnalyticEvent.cpp  SegmentAnalyticEvent.h  SegmentAnalytics.cpp  SegmentAnalytics.h  SegmentAnalyticsCURL.cpp  SegmentAnalyticsCURL.h  SegmentAnalyticsCURLEventTransfer.cpp  SegmentAnalyticsCURLFailedEvent.cpp  (+1 more)
Source/Application/: Application.cpp  Application.h  ComponentRegistry.cpp  ComponentRegistry.h
Source/Archive/: Archive.cpp  Archive.h  ArchiveEntry.cpp  ArchiveEntry.h  ArchiveFactoryRegistry.cpp  ArchiveFactoryRegistry.h
Source/Arguments/: ArgumentCollection.cpp  ArgumentCollection.h  ArgumentParser.cpp  ArgumentParser.h
Source/Bitbucket/: BitbucketDownload.cpp  BitbucketDownload.h  BitbucketDownloadCollection.cpp  BitbucketDownloadCollection.h  BitbucketService.cpp  BitbucketService.h
Source/Compression/: BZip2Utilities.cpp  BZip2Utilities.h  LZMAUtilities.cpp  LZMAUtilities.h  ZLibUtilities.cpp  ZLibUtilities.h
Source/Diff/: OpenVCDiffByteBufferOutputStream.cpp  OpenVCDiffByteBufferOutputStream.h
Source/DiffPatch/: HDiffPatchUtilities.cpp  HDiffPatchUtilities.h
Source/Factory/: Factory.cpp  Factory.h  FactoryRegistry.cpp  FactoryRegistry.h
Source/GitHub/: GitHubRelease.cpp  GitHubRelease.h  GitHubReleaseAsset.cpp  GitHubReleaseAsset.h  GitHubReleaseCollection.cpp  GitHubReleaseCollection.h  GitHubService.cpp  GitHubService.h
Source/Location/: FreeGeoIPGeoLocationService.cpp  FreeGeoIPGeoLocationService.h  GeoLocation.h  GeoLocationService.cpp  GeoLocationService.h
Source/Logging/: LogSystem.cpp  LogSystem.h
Source/Math/: ExtendedMath.cpp  ExtendedMath.h  Matrix2x2.cpp  Matrix2x2.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Source/Network/: HTTPConfiguration.h  HTTPHeaders.cpp  HTTPHeaders.h  HTTPQueryParameters.cpp  HTTPQueryParameters.h  HTTPRequest.cpp  HTTPRequest.h  HTTPRequestSettings.cpp  HTTPRequestSettings.h  HTTPResponse.cpp  HTTPResponse.h  HTTPService.cpp  HTTPService.h  HTTPStatusCode.h  HTTPTimeout.cpp  HTTPTimeout.h  HTTPTransfer.cpp  HTTPTransfer.h  HTTPUtilities.cpp  HTTPUtilities.h  IPAddressService.cpp  IPAddressService.h  IpifyIPAddressService.cpp  IpifyIPAddressService.h
Source/Platform/: DeviceInformationBridge.cpp  DeviceInformationBridge.h  PlatformBridgeFactory.cpp  PlatformBridgeFactory.h  PlatformBridgeLocator.cpp  PlatformBridgeLocator.h  Process.cpp  Process.h  ProcessCreator.cpp  ProcessCreator.h  SystemInformationBridge.cpp  SystemInformationBridge.h  TimeZoneDataManager.cpp  TimeZoneDataManager.h
Source/Rar/: RarArchive.cpp  RarArchive.h  RarArchiveEntry.cpp
Source/Script/: Script.cpp  Script.h  ScriptArguments.cpp  ScriptArguments.h
Source/Signal/: SignalConnectionGroup.cpp  SignalConnectionGroup.h
Source/Singleton/: Singleton.h  SingletonManager.cpp  SingletonManager.h
Source/Utilities/: CDIOUtilities.cpp  CDIOUtilities.h  FileUtilities.cpp  FileUtilities.h  NumberUtilities.cpp  NumberUtilities.h  RapidJSONUtilities.cpp  RapidJSONUtilities.h  StringUtilities.cpp  StringUtilities.h  ThreadUtilities.h  TidyHTMLUtilities.cpp  TidyHTMLUtilities.h  TimeUtilities.cpp  TimeUtilities.h  TinyXML2Utilities.cpp  TinyXML2Utilities.h  Utilities.cpp  Utilities.h
Source/XML/: CustomIndentationXMLPrinter.cpp  CustomIndentationXMLPrinter.h
Source/Zip/: ZipArchive.cpp  ZipArchive.h  ZipArchiveEntry.cpp  ZipArchiveSourceBuffer.cpp  ZipUtilities.cpp  ZipUtilities.h
(+98 files in other folders)
